+Checker now confirms destination url matches the url it visits instead of just checking for a 404 +Added customisable delimiter +Altered how results are shown +Removed vertical alignment as temp fix for css issue when accordion is opened

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,9 +3,10 @@ body, html {
 }
 
 .vertical-centre {
-    position: relative;
-    top: 50%;
-    transform: translateY(-50%);
+    /*position: relative;*/
+    /*top: 50%;*/
+    /*transform: translateY(-50%);*/
+    margin-top: 50px;
 }
 
 .container.-maxwidth {
@@ -13,7 +14,7 @@ body, html {
 }
 
 textarea {
-    min-height: 150px;
+    min-height: 250px;
     resize: vertical;
 }
 
